--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,29 @@
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
 <body>
-    <h1>Hellow world</h1>
-    <div class="div_custom">
-        <p>Hellow</p>
-    </div>
+   <div class="container">
+       <header>
+           <div class="compass-icon">
+               <img src="/Icon/compass.svg"/>
+           </div>
+       </header>
+       <div class="weather-title">
+           <h1>Simply Weather</h1>
+           <p>View the current weather for your city</p>
+       </div>
+
+       <form action='/' method="POST">
+        <input type="text" name="city" class="ghost-input" placeholder="Enter a city name"/>
+       </form>
+
+       <div class="result">
+        <h1 class="temp">234.88</h1>
+        <div class="icon-desc">
+            <img class="icon" src="https://openweathermap.org/img/w/04n.png" alt="icon"/>
+            <h3>overcast clouds</h3>
+        </div>
+        <p class="city">Dhaka</p>
+       </div>
+   </div>
 </body>
 </html>
