--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,12 +25,25 @@
        </form>
 
        <div class="result">
-        <h1 class="temp">234.88</h1>
+           <% if(temp !== null)  { %>
+            <h1 class="temp"><%= temp %></h1>
+            <% } %>
+        
         <div class="icon-desc">
-            <img class="icon" src="https://openweathermap.org/img/w/04n.png" alt="icon"/>
-            <h3>overcast clouds</h3>
+            <% if(icon !== null) {%>
+            <img class="icon" src="https://openweathermap.org/img/w/<%= icon %>.png" alt="icon"/>
+
+            <% } %>
+
+            <% if(des !== null) {%>
+                <h3><%= des %></h3>
+            <%}%>
+          
         </div>
-        <p class="city">Dhaka</p>
+        <% if(city !== null) {%>
+            <p class="city"><%= city %></p>
+        <%}%>
+        
        </div>
    </div>
 </body>
