--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,16 +8,21 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
+  background: #147c91;
+  background: linear-gradient(23deg, #147c91 0%, rgba(17, 205, 223, 0.902398) 17%, #1e9dcd 37%, #26b7e2 65%, #2699c6 89%, #00d4ff 100%);
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 .container {
   background: #fff;
   max-width: 22rem;
   margin: 4rem auto;
+  border: 1px solid black;
 }
 
 header {
-  background: #111;
+  background: #00da4373;
   height: 3rem;
   width: 100%;
   position: relative;
