--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -7,16 +7,29 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
+  background: rgb(20, 124, 145);
+  background: linear-gradient(
+    23deg,
+    rgba(20, 124, 145, 1) 0%,
+    rgba(17, 205, 223, 0.9023984593837535) 17%,
+    rgba(30, 157, 205, 1) 37%,
+    rgba(38, 183, 226, 1) 65%,
+    rgba(38, 153, 198, 1) 89%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 .container {
   background: #fff;
   max-width: 22rem;
   margin: 4rem auto;
+  border: 1px solid black;
 }
 
 header {
-  background: #111;
+  background: #00da4373;
   height: 3rem;
   width: 100%;
   position: relative;
